nldl_derive/tests/ui/deserializable/nla-type-duplicate-fails.stderr
error[E0081]: discriminant value `0` assigned more than once
 --> tests/ui/deserializable/nla-type-duplicate-fails.rs:5:51
  |
5 | #[derive(Debug, PartialEq, nldl::attr::Serialize, nldl::attr::Deserialize)]
  |                                                   ^^^^^^^^^^^^^^^^^^^^^^^
6 | enum ControllerAttributeOperation {
7 |     #[nla_type(0)]
  |                - `0` assigned here
8 |     Unspec,
9 |     #[nla_type(crate::ZERO)]
  |                ----------- `0` assigned here
  |
  = note: this error originates in the derive macro `nldl::attr::Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
